[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/example_package_michaelboerman"]

[project]
name = "example_package_michaelboerman"
version = "0.1.3"
authors = [
  { name="Michael Boerman", email="michaelboerman@hey.com" },
]
description = "A small, tutorial-based example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/michaelboerman/example_python_package"
Issues = "https://github.com/michaelboerman/example_python_package/issues"